--- a/.github/workflows/ui-test.yml
+++ b/.github/workflows/ui-test.yml
@@ -73,12 +73,14 @@ jobs:
           echo "FIN_STATUS=success" >> $GITHUB_ENV
 
       - name: Process Test Result
+        if: always()
         run: |
           mv ~/Library/Developer/Xcode/DerivedData/DarockBili-*/Logs/Test/Test-*.xcresult ./Caches/Test-1.xcresult
           mkdir Caches/ExportFiles
           xcparse -s ./Caches/Test-1.xcresult ./Caches/ExportFiles
 
       - name: Upload Test Attachments
+        if: always()
         uses: actions/upload-artifact@v3
         with:
           name: Test Attachments
