--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -163,9 +163,9 @@ jobs:
 
       - name: Install Apple certificate and provisioning profile for Xcode
         env:
-          BUILD_CERTIFICATE_BASE64: ${{ secrets.COMPANY_P12 }}
-          P12_PASSWORD: ${{ secrets.COMPANY_P12_PASSWORD }}
-          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.COMPANY_PROV }}
+          BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
+          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
+          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.BUILD_PROVISION_PROFILE_BASE64 }}
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
         run: |
           # create variables
@@ -209,10 +209,11 @@ jobs:
           path: ~/Library/Developer/Xcode/DerivedData
           
       - name: Archive DarockBili App
-        env: 
-          PROF_UUID: ${{ secrets.COMPANY_PROV_UUID }}
+        env:
+          ASCAPI_KEY_ID: ${{ secrets.ASCAPI_KEY_ID }}
+          ASCAPI_ISSUER_ID: ${{ secrets.ASCAPI_ISSUER_ID }}
         run: |
-          xcodebuild archive -project ./DarockBili.xcodeproj -scheme 'DarockBili Watch App' -archivePath ./build.xcarchive -IDEPostProgressNotifications=YES CODE_SIGN_IDENTITY=$PROF_UUID AD_HOC_CODE_SIGNING_ALLOWED=YES COMPILER_INDEX_STORE_ENABLE=NO
+          xcodebuild archive -project ./DarockBili.xcodeproj -scheme 'DarockBili Watch App' -archivePath ./build.xcarchive -IDEPostProgressNotifications=YES CODE_SIGN_IDENTITY=- AD_HOC_CODE_SIGNING_ALLOWED=YES CODE_SIGN_STYLE=Automatic DEVELOPMENT_TEAM=B57D8PP775 COMPILER_INDEX_STORE_ENABLE=NO
           
       - name: Upload Xcode Archive
         uses: actions/upload-artifact@v3
@@ -358,14 +359,33 @@ jobs:
 
       - name: Export IPA File
         run: |
-          xcodebuild -exportArchive -archivePath ./DarockBili_Release.xcarchive -exportPath ./ -exportOptionsPlist ./ExportOptions/ad-hoc.plist -DVTProvisioningIsManaged=YES -DVTSkipCertificateValidityCheck=YES
+          xcodebuild -exportArchive -archivePath ./DarockBili_Release.xcarchive -exportPath ./ -exportOptionsPlist ./ExportOptions/app-store.plist -DVTProvisioningIsManaged=YES -DVTSkipCertificateValidityCheck=YES
           mv DarockBili.ipa DarockBili_Release.ipa
+
+      - name: Resign IPA
+        env:
+          COMPANY_P12_NAME: ${{ secrets.COMPANY_P12_NAME }}
+        run: |
+          CODESIGN_ALLOCATE=`xcrun --find codesign_allocate`; export CODESIGN_ALLOCATE
+          IPA="./DarockBili_Release.ipa"
+          PROVISION="$RUNNER_TEMP/build_pp.mobileprovision"
+          CERTIFICATE="$COMPANY_P12_NAME"
+          # unzip the ipa
+          unzip -q "$IPA"
+          # remove the signature
+          rm -rf Payload/*.app/_CodeSignature
+          # replace the provision
+          cp "$PROVISION" Payload/*.app/embedded.mobileprovision
+          # sign with the new certificate (--resource-rules has been deprecated OS X Yosemite (10.10), it can safely be removed)
+          /usr/bin/codesign -f -s "$CERTIFICATE" Payload/*.app
+          # zip it back up
+          zip -qr resigned.ipa Payload
           
       - name: Upload IPA File
         uses: actions/upload-artifact@v3
         with:
           name: Company IPA
-          path: ./DarockBili_Release.ipa
+          path: ./resigned.ipa
 
 #  deploy:
 #    name: Deploy to TestFlight
